--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,22 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+
+body.scanner-active {
+  --background: transparent;
+  --ion-background-color: transparent;
+}
+
+.modal-size{
+  display: flex;
+  flex-direction: column;
+    --width: 80%;
+    --max-height: 30vh;
+    --border-radius:10px;
+}
+
+
+*{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
